1 семестр/Распределённые системы и технологии/k8s/part_5/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: rgz
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080

# The Service "nginx" is invalid:
# spec.ports[0].nodePort: Invalid value:
# 8080: provided port is not in the valid range.
# The range of valid ports is 30000-32767
