1 семестр/Распределённые системы и технологии/k8s/part_5/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: rgz
spec:
  ingressClassName: nginx
  rules:
    - host: rgz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
